<resources>
    <string name="app_name">Xmanager</string>
    <string name="activity_main_title">Xmanager</string>
    <string name="activity_main_icon">Account</string>
    <string name="main_header_title">Pannello di controllo</string>
    <string name="main_header_description">Qui puoi creare e gestire tutti i tuoi giocatori, i programmi di training e i dispositivi associati. Puoi caricare programmi e iniziare le sessioni di allenamento.</string>
    <string name="main_header_user_no_title">Preparatore atletico</string>
    <string name="main_header_action_run_program">avvia programma</string>
    <string name="main_header_program_running">In corso</string>
    <string name="main_header_program_finished">Terminato</string>
    <string name="main_header_program_complation">COMPLETAMENTO</string>
    <string name="activity_main_header_account_username">Crea un account</string>
    <string name="activity_main_header_account_description">Inserisci il nome completo, un titolo o descrizione per il tuo profilo.</string>
    <string name="activity_main_header_title">Dashboard</string>
    <string name="activity_main_header_subtitle">ALLENATORE</string>
    <string name="activity_main_header_title_description">Gestisci gli allenamenti, aggiungi dispositivi e crea programmi</string>
    <string name="activity_main_header_account_description2">Inserisci un titolo o descrizione per il tuo profilo.</string>
    <string name="activity_update_profile">Account</string>
    <string name="activity_update_profile_header_title">Informazioni del profilo</string>
    <string name="activity_update_profile_header_description">Inserisci e salva i tuoi dati da coach.</string>
    <string name="activity_update_profile_field_fullname">Nome e cognome</string>
    <string name="activity_update_profile_field_headline">Il tuo titolo o una breve descrizione</string>
    <string name="activity_update_profile_field_age">Età</string>
    <string name="activity_update_profile_button_save">SALVA</string>
    <string name="select_program_sheet_title">Scegli un programma</string>
    <string name="select_program_sheet_description">Dopo aver scelto il programma che si vuole utilizzare, inizierà la connessione con tutti i dispositivi registrati a tutti i giocatori. Dopo la connessione verra caricato il programma scelto.</string>
    <string name="upload_program_sheet_title">Caricamento programma</string>
    <string name="upload_program_sheet_description">In questa fase viene caricato il programma sui dispositivi dei giocatori. Cerca di restare più vicino ai dispositivi Bluetooth in modo da caricare i programmi senza ritardi.</string>
    <string name="upload_program_sheet_state_initial_title">Cercando il dispositivo…</string>
    <string name="upload_program_sheet_state_connecting_title">In connessione…</string>
    <string name="upload_program_sheet_state_connected_title">Connesso al dispositivo</string>
    <string name="upload_program_sheet_state_disconnected_title">Dispositivo disconnesso</string>
    <string name="upload_program_sheet_state_error_connection_title">Errore connessione dispositivo</string>
    <string name="upload_program_sheet_state_writing_data_title">Caricamento programma…</string>
    <string name="row_empty_player_title">Registra un giocatore</string>
    <string name="row_empty_player_description">Registra un nuovo giocatore inserendo tutti i dati importanti. Inserisci un nome, ruolo e i dispositivi Bluetooth.</string>
    <string name="row_empty_player_action_title">Registra</string>
    <string name="row_empty_program_title">Crea un programma</string>
    <string name="row_empty_program_description">Non hai ancora nessun proramma. Crea un programma inserendo tutte le sessioni personalizzati.</string>
    <string name="row_empty_program_action_title">Crea</string>
    <string name="activity_main_row_player_header_title">Giocatori</string>
    <string name="activity_main_row_player_menu_item_edit">Modifica giocatore</string>
    <string name="activity_main_row_player_menu_item_upload_program">Avvia programma</string>
    <string name="activity_main_row_player_menu_item_register_device">Registra dispositivo</string>
    <string name="activity_main_row_player_menu_item_delete_devices">Elimina dispositivi</string>
    <string name="activity_main_row_player_menu_item_delete_player">Elimina giocatore</string>
    <string name="activity_main_fab_menu_item_create_player">Crea giocatore</string>
    <string name="activity_main_fab_menu_item_create_program">Crea programma</string>
    <string name="row_player_no_device_subtitle">Nessun dispositivo connesso</string>
    <string name="row_player_device_version_title">Versione:</string>
    <string name="row_player_device_left_title">Sinistra</string>
    <string name="row_player_device_right_title">Destra</string>
    <string name="row_player_devices_programs_title">Dispositivi</string>
    <string name="row_player_add_device_button_title">Aggiungi dispositivo</string>
    <string name="title_activity_create_program_nav_title">Programma</string>
    <string name="title_activity_create_program_header_title">Crea un programma</string>
    <string name="title_activity_update_program_header_title">Aggiorna il programma</string>
    <string name="title_activity_create_program_header_description">Scegli un nome per il nuovo programma di allenamento, aggiungi delle sessioni, la durata e inizia ad usarla.</string>
    <string name="title_activity_update_program_header_description">Cambia il nome del programma di allenamento selezionato, modifica le sessioni, cambia la durata e inizia ad usarla.</string>
    <string name="title_activity_create_program_field_name">Titolo del programma</string>
    <string name="activity_create_program_row_add_session_title">Inserisci sessione</string>
    <string name="title_activity_create_program_button_create">Crea programma</string>
    <string name="activity_create_program_button_save">salva programma</string>
    <string name="activity_create_program_button_new_session">sessione</string>
    <string name="activity_create_program_row_number">3</string>
    <string name="activity_create_program_row_title">Sessione</string>
    <string name="activity_create_program_row_description">Tempo</string>
    <string name="sheet_create_session_title">Sessione di allenamento</string>
    <string name="sheet_create_session_description">Seleziona le parti della scarpa che vuoi utilizzare per questa sessione, l\'animazione e la durata.</string>
    <string name="sheet_create_session_duration_title">Durata sessione</string>
    <string name="sheet_create_session_duration_description">0 secondi</string>
    <string name="sheet_create_session_anim_type_title">Animazione led</string>
    <string name="sheet_create_session_type_static">Static</string>
    <string name="sheet_create_session_type_blink">Blink</string>
    <string name="sheet_create_session_type_fade">Fade (coming soon)</string>
    <string name="sheet_create_session_dir_title">Posizione indicatore led</string>
    <string name="sheet_create_session_dir_col_title">Collo Pieno</string>
    <string name="sheet_create_session_dir_col_ext_title">Collo Esterno</string>
    <string name="sheet_create_session_dir_col_int_title">Collo Interno</string>
    <string name="sheet_create_session_dir_foot_ext_title">Esterno Piede</string>
    <string name="sheet_create_session_dir_foot_int_title">Interno Piede</string>
    <string name="sheet_create_session_dir_description">Seleziona la posizione che vuoi utilizzare</string>
    <string name="sheet_create_session_dir_ext">ext</string>
    <string name="sheet_create_session_dir_top_ext">t-ext</string>
    <string name="sheet_create_session_dir_top">top</string>
    <string name="sheet_create_session_dir_top_int">t-int</string>
    <string name="sheet_create_session_dir_int">int</string>
    <string name="sheet_create_session_button_save">Salva</string>
    <string name="activity_program_list_title">Programmi</string>
    <string name="activity_program_list_header_title">Programmi di allenamento</string>
    <string name="activity_program_list_header_description">Qui puoi gestire tutti i tuoi programmi di allenamento.</string>
    <string name="activity_program_list_button_create_new">nuovo programma</string>
    <string name="activity_program_list_row_menu_update">Modifica</string>
    <string name="activity_program_list_row_menu_delete">Elimina</string>
    <string name="activity_permissions_nav_title">Autorizzazioni</string>
    <string name="activity_permissions_title">Gestione dei permessi</string>
    <string name="activity_permissions_error_device">Questo dispositivo non supporta il bluetooth</string>
    <string name="activity_permissions_description">Per poter utilizzare tutte le funzionalità previste, Xmanager necessita alcuni permessi e funzionalità. É necessario attivarle tutte!</string>
    <string name="activity_permissions_button_close">Chiudi</string>
    <string name="activity_permissions_bluetooth_title">Bluetooth</string>
    <string name="activity_permissions_bluetooth_description">Il Bluetooth è necessario per eseguire qualsiasi comunicazione Bluetooth, come richiedere una connessione, accettare una connessione e trasferire dati.</string>
    <string name="activity_permissions_bluetooth_active_button_title">ATTIVA BLUETOOTH</string>
    <string name="activity_permissions_bluetooth_status_active_text">Attivo</string>
    <string name="activity_permissions_gps_title">Geolocalizzazione</string>
    <string name="activity_permissions_gps_description">I dispositivi Android recenti richiedono anche l\'attivazione dei servizi di posizione/GPS affinché una scansione Bluetooth abbia esito positivo.</string>
    <string name="activity_permissions_gps_active_button_title">ATTIVA GPS</string>
    <string name="activity_permissions_gps_status_active_text">Attivo</string>
    <string name="activity_permissions_fine_location_title">Posizione</string>
    <string name="activity_permissions_fine_location_description">La posizione è necessario perché una scansione Bluetooth può raccogliere informazioni sulla posizione dell\'utente. Queste informazioni possono provenire dai dispositivi dell\'utente.</string>
    <string name="activity_permissions_fine_location_active_button_title">ATTIVA POSIZIONE</string>
    <string name="activity_permissions_fine_location_status_in_use_text">In uso</string>
    <string name="activity_permissions_fine_location_status_denied_text">Disabilitato</string>
    <string name="activity_permissions_fine_location_go_to_settings_text">Vai in impostazioni</string>
    <string name="alert_dialog_">DebugActivity</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="activity_device_search_title">Cerca dispositivi</string>
    <string name="activity_device_search_header_subtitle">nome giocatore</string>
    <string name="activity_device_search_header_description">Avvicinati ai dispositivi bluetooth, seleziona uno tra quelli trovati e inizia a testarli.</string>
    <string name="activity_device_search_row_subtitle">nome dispositivo</string>
    <string name="activity_device_search_button_done">fatto</string>
    <string name="activity_device_search_sheet_connecting">Connessione al dispositivo…</string>
    <string name="activity_device_search_sheet_connected">Connesso</string>
    <string name="activity_device_search_sheet_connecting_description">Dopo che la connessione è stata stabilita controlla se il dispositivo sta lampeggiando e seleziona il piede.</string>
    <string name="activity_device_search_sheet_button_save">Salva</string>
    <string name="activity_device_search_sheet_radio_left_foot">Piede sinistro</string>
    <string name="activity_device_search_sheet_radio_right_foot">Piede destro</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="upload_program_subtitle">Caricamento programma…</string>
</resources>