<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit_player"
        android:title="@string/activity_main_row_player_menu_item_edit"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_upload_program"
        android:title="@string/activity_main_row_player_menu_item_upload_program"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add_device"
        android:title="@string/activity_main_row_player_menu_item_register_device"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_devices"
        android:title="@string/activity_main_row_player_menu_item_delete_devices"
        app:showAsAction="never"/>
</menu>
