<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="0dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/noProgramCardTitle"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row_empty_program_title"/>
            <TextView
                android:id="@+id/noProgramCardDescription"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row_empty_program_description"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/noProgramCardCreateButton"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="14dp"
                android:text="@string/row_empty_program_action_title">
            </com.google.android.material.button.MaterialButton>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>