<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_program_sheet_title"
            android:layout_marginBottom="10dp">
        </TextView>
        <TextView
            android:id="@+id/description"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_program_sheet_description"
            android:layout_marginBottom="20dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/playerNameTextView"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname_lastname"
            android:layout_marginBottom="5dp">
        </TextView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/progressBarTitle"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/shoePairContainer"
                android:text="@string/upload_program_subtitle"
                android:layout_centerVertical="true">
            </TextView>
            <LinearLayout
                android:id="@+id/shoePairContainer"
                android:layout_width="24dp"
                android:layout_height="32dp"
                android:padding="0dp"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/leftShoeImage"
                    android:layout_width="12dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/left_unactive">
                </ImageView>
                <ImageView
                    android:id="@+id/rightShoeImage"
                    android:layout_width="12dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/right_unactive">
                </ImageView>
            </LinearLayout>
        </RelativeLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/uploadProgressProgram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:indeterminate="false"
            android:max="100"
            android:minHeight="10dp"
            android:minWidth="200dp"
            android:progress="30"
            app:trackThickness="4dp"/>

    </LinearLayout>

</LinearLayout>